--- a/cnn_lstm_model.ipynb
+++ b/cnn_lstm_model.ipynb
@@ -11,7 +11,7 @@
     "import re\n",
     "import scipy.io as scio\n",
     "\n",
-    "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.signal\n",
     "from keras.models import Sequential,Model,load_model\n",
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_num = 30\n",
+    "raw_num = 240\n",
     "col_num = 2000\n",
     "\n",
     "class Data(object):\n",
@@ -162,7 +162,7 @@
     "    \n",
     "    # 分类\n",
     "    dc_layer1 = LSTM(60, return_sequences=True)(encoder)\n",
-    "    dc_layer2 = LSTM(30)(dc_layer1)\n",
+    "    dc_layer2 = LSTM(60)(dc_layer1)\n",
     "    dc_layer3 = Dropout(0.5)(dc_layer2)\n",
     "    dc_layer4 = Dense(10, activation='softmax')(dc_layer3)\n",
     "    \n",
@@ -201,6 +201,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "begain_time = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = built_model()\n",
     "opt = Adam(lr=0.0006)\n",
     "model.compile(optimizer=opt, loss='mean_squared_error', metrics=['accuracy'])\n",
@@ -213,26 +223,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate_reduction = ReduceLROnPlateau(monitor = 'val_acc', patience = 5,\n",
-    "                                            verbose = 1, factor=0.5, \n",
-    "                                            min_lr = 0.00001)\n",
-    "checkpoint = ModelCheckpoint('model/weights.{epoch:02d}-{val_acc:.4f}.hdf5', \n",
-    "                            monitor='val_acc', \n",
-    "                            verbose=0, \n",
-    "                            save_best_only=True, \n",
-    "                            save_weights_only=False, \n",
-    "                            mode='max', \n",
-    "                            period=1)\n",
-    "history = model.fit(x=X_train, y=y_train, batch_size = 100, epochs=200, \n",
+    "history = model.fit(x=X_train, y=y_train, batch_size = 100, epochs=400, \n",
     "                    verbose=2, validation_data=(X_test, y_test),\n",
-    "                    shuffle=True, initial_epoch=0, callbacks=[checkpoint])"
+    "                    shuffle=True, initial_epoch=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end_time = time.time()\n",
+    "time = end_time - begain_time\n",
+    "print('time:', time)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -276,16 +287,6 @@
     "label_true = np.argmax(y_test, axis=1)\n",
     "confusion_mat = confusion_matrix(label_true, label_pre)\n",
     "plot_confusion_matrix(confusion_mat, classes=range(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.utils import plot_model\n",
-    "plot_model(model, to_file='model.png', show_shapes= True)"
    ]
   },
   {
