update some new information

--- a/cnn_lstm_model.ipynb
+++ b/cnn_lstm_model.ipynb
@@ -41,7 +41,6 @@
     "from keras.layers import *\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from generate_data import *\n",
     "import itertools\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from keras.callbacks import ReduceLROnPlateau\n",
@@ -66,11 +65,6 @@
     "col_num = 2000\n",
     "\n",
     "class Data(object):\n",
-    "    '''\n",
-    "    读取mat格式数据，由于每个故障数据数量不同，这里只截取前480000个数据\n",
-    "    get_data()产生的数据为（2400，2000）的输入数据\n",
-    "    get_label()产生的数据为（2400，1）的标签数据\n",
-    "    '''\n",
     "    \n",
     "    def __init__(self):\n",
     "        self.data = self.get_data()\n",
@@ -123,18 +117,13 @@
     "lb = LabelBinarizer()\n",
     "y = lb.fit_transform(label)\n",
     "\n",
-    "'''\n",
-    "这里的数据是原始数据，没有进行维纳滤波和归一化\n",
-    "维纳滤波和归一化的试验已经再juypter上做了，可以打开再参考一下\n",
-    "'''\n",
-    "# 维纳滤波\n",
+    "# Wiener filtering\n",
     "data_wiener = scipy.signal.wiener(data, mysize=3, noise=None)\n",
     "\n",
-    "\n",
-    "# 下采样\n",
+    "# downsampling\n",
     "index = np.arange(0,2000, 8)\n",
     "data_samp = data_wiener[:, index]\n",
-    "print(data_samp.shape)  # 如果正确应该输入的是（2400，250）"
+    "print(data_samp.shape)"
    ]
   },
   {
@@ -185,10 +174,8 @@
     "    ec2_outputs = MaxPooling1D(pool_size=2, strides=None, padding='valid',\n",
     "                             data_format='channels_first')(ec2_layer5)\n",
     "    \n",
-    "    # 将两个自编码做点积\n",
     "    encoder = multiply([ec1_outputs, ec2_outputs])\n",
     "    \n",
-    "    # 分类\n",
     "    dc_layer1 = LSTM(60, return_sequences=True)(encoder)\n",
     "    dc_layer2 = LSTM(60)(dc_layer1)\n",
     "    dc_layer3 = Dropout(0.5)(dc_layer2)\n",
@@ -1190,9 +1177,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TensorFlow-1.13.1",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow-1.13.1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1204,7 +1191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
